refactor: Let Context have file system state and context properties separately